test/Fail/Issue2456.err
Issue2456.agda:9.12-19: error: [Syntax.WrongContentBlock]
A 'postulate' block can only contain type signatures, possibly
under keywords 'instance' and 'private'
